z-index fix

--- a/rb/media/ui-prototype/css/readrboard.css
+++ b/rb/media/ui-prototype/css/readrboard.css
@@ -102,7 +102,7 @@ div.rdr h1 span	{font-size:18px; color:#008be4;}
 div.rdr div.rdr_sentimentBox							{}
 div.rdr div.rdr_sntPnl 									{float:left; position:relative; display:block; height:100%; overflow:hidden; /*width is reset with js - rindow.settings.pnlWidth */ }
 
-div.rdr div.rdr_sntPnl div.rdr_body						{width:100%; top:35px; /*var rdr_headerHeight*/ ; z-index:3; overflow-x:hidden; overflow-y:auto; padding:0;}
+div.rdr div.rdr_sntPnl div.rdr_body						{width:100%; z-index:3; overflow-x:hidden; overflow-y:auto; padding:0; position:relative;}
 div.rdr div.rdr_sntPnl div.rdr_header                   {background:#fff; position:relative; height:35px; /*var rdr_headerHeight*/ width:100%; z-index:3;}
 div.rdr div.rdr_sntPnl.rdr_contentPanel div.rdr_header,
 div.rdr div.rdr_sntPnl.rdr_whyPanel div.rdr_header 		{background:url(/static/images/header_arrow.png) 0px -1px no-repeat #fff;}
